[project]
name = "devops-demo-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "httpx==0.28.1",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "httpx==0.28.1",
    "pytest-asyncio==1.3.0",
]
